--- a/src/components/NavMenu/navMenu.css
+++ b/src/components/NavMenu/navMenu.css
@@ -14,6 +14,10 @@
 	transition: height 0.3s ease-in-out;
 }
 
+.nav_menu .logo_wrapper {
+	cursor: pointer;
+}
+
 .nav_menu .links_wrapper .link {
 	text-decoration: none;
 	color: #1b1a1a;
